# wasmtime-pico2-spi

./: Cargo.toml  README.md  build.sh  flake.nix  pacman.wasm
.cargo/: config.toml
compiler/: Cargo.toml
compiler/src/: main.rs
guest/: Cargo.toml
guest/.cargo/: config.toml
guest/src/: bindings.rs  lib.rs
guest/wit/: pico.wit
guests/oled-screen/ball-screensaver/: Cargo.toml
guests/oled-screen/ball-screensaver/src/: lib.rs
guests/oled-screen/ball-screensaver/wit/: world.wit
guests/oled-screen/pacman/: Cargo.toml
guests/oled-screen/pacman/src/: lib.rs
guests/oled-screen/pacman/wit/: world.wit
guests/oled-screen/pmod-oled-driver/: Cargo.toml
guests/oled-screen/pmod-oled-driver/src/: lib.rs
guests/oled-screen/pmod-oled-driver/wit/: driver.wit  world.wit
guests/temperature-sensor/: Cargo.toml
guests/temperature-sensor/src/: lib.rs
guests/temperature-sensor/wit/: world.wit
lib/delay/: Cargo.toml
lib/delay/src/: lib.rs
lib/gpio/: Cargo.toml
lib/gpio/src/: lib.rs
lib/spi/: Cargo.toml
lib/spi/src/: lib.rs
pico2-quick/: Cargo.toml
pico2-quick/src/: blinky_lib.rs  guest.component.wasm  guest.pulley  main.rs  spi_lib.rs
src/: guest.pulley  main.rs
wit/: blinky.wit  delay.wit  gpio.wit  spi.wit
