[workspace]
resolver = "2"

members = [
    "compiler",
    "pico2-quick",
    "guests/oled-screen/pmod-oled-driver",
    "guests/oled-screen/pacman",
    "guests/oled-screen/ball-screensaver"
]

[profile.release]
debug = 2            # Essential for stepping and backtraces
opt-level = "z"
strip = "none"       # Do not strip symbols
