[package]
name = "pico2-quick"
version = "0.2.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0"

embedded-alloc = "0.5.1"
wasmtime = { version = "41.0.1", default-features = false, features = ["runtime", "pulley", "component-model"] }

delay = { path = "../lib/delay" }
gpio = { path = "../lib/gpio" }
spi = { path = "../lib/spi" }
